crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_block_raw_assert_binds_where.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS unsafe_block_raw_assert_binds_where
  all assertions discharged
PASS main
  all assertions discharged

stderr:
