crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_block_raw_assert_emp.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS unsafe_block_raw_assert_emp
  all assertions discharged
PASS main
  all assertions discharged

stderr:
